# CCC-Assesment

./: README.md  pyproject.toml
app/: .gitignore  database.py  main.py  models.py  services.py
