[tool.poetry]
name = "ccc-assesment"
version = "0.1.0"
description = ""
authors = ["Vineet Patil <vineet.patil@coditas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
